# GenAI-LLM-Deployment-FastAPI-Docker-AWS-cookiecutter

./: LICENSE  Makefile  README.md  cookiecutter.json  requirements.txt  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  template.envrc
{{ cookiecutter.repo_name }}/.github/: deploy-app.yml
{{ cookiecutter.repo_name }}/api/: Makefile  pyproject.toml  requirements-deploy.txt  requirements.txt
{{ cookiecutter.repo_name }}/api/app/: api_exceptions.py  main.py
{{ cookiecutter.repo_name }}/api/app/models/: __init__.py  initial.py
{{ cookiecutter.repo_name }}/api/app/models/genai/: llm_prompt.py
{{ cookiecutter.repo_name }}/api/app/routers/: __init__.py  genai.py  initial.py
{{ cookiecutter.repo_name }}/api/app/service/: llm_service.py
{{ cookiecutter.repo_name }}/api/app/utils/: aws_utils.py  logging.py
{{ cookiecutter.repo_name }}/api/assets/: Dockerfile  docker-compose.yml  docker_push.py
{{ cookiecutter.repo_name }}/infra/terraform/: Makefile
{{ cookiecutter.repo_name }}/infra/terraform/envs/prod/: main.tf
{{ cookiecutter.repo_name }}/infra/terraform/modules/{{ cookiecutter.application_name  }}/: 00_vars_default.tf  01_ecs_cluster.tf  02_ecr_repo.tf  03_ecs_task_def.tf  04_ecs_service.tf  04_security.tf  05_load_balancer.tf  99_params_and_secrets.tf
{{ cookiecutter.repo_name }}/licenses/: apache-v2.0.md  bsd-2.md  mit.md
