[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
project_name     = FastAPI-AWS Deployment - Cookiecutter
package_name     = fastapi_aws_cookiecutter
description      = An easy, out-of-the-box method for deploying a FastAPI to AWS
long_description = An easy, out-of-the-box method for deploying a FastAPI to AWS
author_name      = Victor Calderon
license          = MIT
github_project   = https://github.com/vcalderon2009/2025-02-GenAI-workshop-LLM-Deployment
version          = 0.0.1
url              = https://github.com/vcalderon2009/2025-02-GenAI-workshop-LLM-Deployment
